--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
 
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Wessam Abdelnabi <wessamabdelnabi903@gmail.com>
+Islam Ahmed <eslamelbltagye1111@gmail.com>
